--- a/src/App.scss
+++ b/src/App.scss
@@ -43,7 +43,7 @@
     padding: 0.6rem;
   }
 }
-form{
+.form-wrapper{
 
 
   padding: 2rem;
@@ -99,4 +99,39 @@ textarea{
 .btn{
   display: flex;
   gap:1rem;
+  cursor: pointer;
+
+}
+
+.form-btn{
+  padding: 2rem;
+  display: flex;
+  gap: 1rem;
+  
+.submit{
+  background-color: indigo;
+  min-width: 8rem;
+  padding: 1rem;
+  color: #fff;
+  font-size: 1rem;
+  text-transform: capitalize;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.reset{
+  text-transform: capitalize;
+  font-size: 1rem;
+  color: #fff;
+  background-color: lightcoral;
+  min-width: 8rem;
+  padding: 1rem;
+  border: none;
+  outline:none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
 }
